[package]
name = "satellite_imagery_downloader"
description = "A library/utility to download satellite imagery from the Sentinel Hub API"
version = "0.1.0"
edition = "2021"

[lib]
name = "satellite_imagery_downloader"
path = "src/lib.rs"

[[bin]]
name = "satellite_imagery_downloader"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.39"
image = "0.25.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.138"
