[package]
name = "satellite_imagery_downloader"
description = "A library/utility to download satellite imagery"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "satellite_imagery_downloader"
path = "src/lib.rs"

[[bin]]
name = "satellite_imagery_downloader"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.39"
image = "0.25.5"
indicatif = "0.17.11"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.138"
